--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@ p {
   padding-bottom: 400px;
 }
 
+@media screen and (max-width: 480px) {
+    .img-fluid {
+         width: 480px;
+    }
+}
 
 #instagram{
   font-family: 'PT Serif', serif;
