--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,8 @@ p {
   background-attachment: fixed;
   background-size: cover;
   opacity: 0.8;
-  max-width: 100%;
-  max-height: auto;
-  width: auto;
+  width: 100%;
+  max-width: 500px
   position: relative;
   padding-top: 50px;
   padding-bottom: 400px;
