--- a/css/style.css
+++ b/css/style.css
@@ -100,12 +100,16 @@ p {
   background-size: cover;
   opacity: 0.8;
   width: 100%;
-  max-width: 500px
   position: relative;
   padding-top: 50px;
   padding-bottom: 400px;
 }
 
+@media screen and (max-width:480px) {
+    .img-fluid {
+        width: 100%;
+    }
+}
 
 #instagram{
   font-family: 'PT Serif', serif;
