--- a/css/style.css
+++ b/css/style.css
@@ -99,17 +99,13 @@ p {
   background-attachment: fixed;
   background-size: cover;
   opacity: 0.8;
-  width: 100%;
+  max-width: 100%;
+  height: auto;
   position: relative;
   padding-top: 50px;
   padding-bottom: 400px;
 }
 
-@media screen and (max-width:480px) {
-    .img-fluid {
-        width: 100%;
-    }
-}
 
 #instagram{
   font-family: 'PT Serif', serif;
