--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,10 @@ p {
   background-repeat: no-repeat;
   background-color: #eaf6f6;
   background-attachment: fixed;
-  background-size: cover;
+  background-size: 100% 100%;
   opacity: 0.8;
   max-width: 100%;
-  height: auto;
+  height: 100vh;
   position: relative;
   padding-top: 50px;
   padding-bottom: 400px;
