--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,12 @@ p {
 
 .img-fluid {
   background-image: url("../images/background.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
   background-color: #eaf6f6;
   background-attachment: fixed;
-  background-size: 100% 100%;
+  max-width: 100%;
+  max-height: 100%;
   opacity: 0.8;
   height: 100vh;
   padding-top: 50px;
