--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ p {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #eaf6f6;
+  background-attachment: fixed;
   max-width: 100%;
   max-height: 100%;
   opacity: 0.8;
