--- a/css/style.css
+++ b/css/style.css
@@ -109,11 +109,11 @@ p {
 @media screen and (max-width: 992px) {
   .img-fluid {
     background-image: url("../images/background.jpg");
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-color: #eaf6f6;
     background-attachment: fixed;
-    max-width: 100%;
+    max-width: 95%;
     max-height: 100%;
     opacity: 0.8;
     height: 100vh;
@@ -125,11 +125,11 @@ p {
 @media screen and (max-width: 600px) {
   .img-fluid {
     background-image: url("../images/background.jpg");
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-color: #eaf6f6;
     background-attachment: fixed;
-    max-width: 100%;
+    max-width: 95%;
     max-height: 100%;
     opacity: 0.8;
     height: 100vh;
