--- a/css/style.css
+++ b/css/style.css
@@ -108,15 +108,14 @@ p {
 /* On screens that are 992px wide or less, the background color is blue */
 @media screen and (max-width: 992px) {
   .img-fluid {
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/home-portrait.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #eaf6f6;
     background-attachment: fixed;
-    max-width: 95%;
+    max-width: 100%;
     max-height: 100%;
     opacity: 0.8;
-    height: 100vh;
     padding-top: 50px;
   }
 }
@@ -124,15 +123,14 @@ p {
 /* On screens that are 600px wide or less, the background color is olive */
 @media screen and (max-width: 600px) {
   .img-fluid {
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/home-portrait.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #eaf6f6;
     background-attachment: fixed;
-    max-width: 95%;
+    max-width: 100%;
     max-height: 100%;
     opacity: 0.8;
-    height: 100vh;
     padding-top: 50px;
   }
 }
