--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,8 @@ p {
     background-repeat: no-repeat;
     background-color: #eaf6f6;
     background-attachment: fixed;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%
     opacity: 0.8;
     padding-top: 50px;
   }
@@ -128,8 +128,8 @@ p {
     background-repeat: no-repeat;
     background-color: #eaf6f6;
     background-attachment: fixed;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%
     opacity: 0.8;
     padding-top: 50px;
   }
