--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,8 @@ p {
     background-repeat: no-repeat;
     background-color: #eaf6f6;
     opacity: 0.8;
+    width: 414px;
+    height: 896px;
     padding: 50px;
   }
 }
