--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ p {
   max-height: 100%;
   opacity: 0.8;
   height: 100vh;
-  padding: 50px;
+  padding-top: 50px;
 }
 
 
@@ -115,7 +115,6 @@ p {
     opacity: 0.8;
     width: 414px;
     height: 896px;
-    padding: 50px;
   }
 }
 
