--- a/css/style.css
+++ b/css/style.css
@@ -100,21 +100,20 @@ p {
   background-attachment: fixed;
   max-width: 100%;
   max-height: 100%;
-  opacity: 0.8;
   height: 100vh;
-  padding-top: 50px;
+  opacity: 0.8;
+  padding: 50px;
 }
 
 
 @media screen and (max-width: 828px) {
   .img-fluid {
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/home-portrait.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #eaf6f6;
     opacity: 0.8;
-    width: 414px;
-    height: 896px;
+    height: 100vh;
   }
 }
 
