--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,17 @@ h1 {
   text-decoration: none;
 }
 
+h2{
+  font-family: 'PT Serif', serif;
+  color: #003260;
+  font-size: 2.2rem;
+  font-weight: bold;
+}
+
 h3 {
   font-family: 'PT Serif', serif;
-  color: #11999E;
+  color: #003260;
+  font-size: 1.5rem;
 }
 
 #navigation a{
@@ -53,7 +61,6 @@ h3 {
 }
 
 a:hover {
-
   opacity: 0.7;
 }
 
@@ -62,7 +69,7 @@ a:hover {
 }
 
 
-p {
+.index-meet-text {
   font-size: 1.8em;
   width: 100%;
   text-align: center;
@@ -75,6 +82,15 @@ p {
   text-align: center;
   padding-right: 30px;
 }
+
+.about-text {
+  font-size: 1.1em;
+  text-align: justify;
+  margin-top: 1.5rem;
+  font-weight:500;
+}
+
+
 
 .maintxt {
   font-family: 'Kaushan Script', cursive;
@@ -151,7 +167,14 @@ p {
   background-color: #eaf6f6;
   background-size: cover;
   padding-top: 20px;
+}
 
+.about-page-middle-container{
+  background-image: url("../images/wall.jpg");
+  background-repeat: no-repeat;
+  background-color: #eaf6f6;
+  background-size: cover;
+  padding: 50px 0px;
 }
 
 .bottom-container {
