--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,10 @@ a:hover {
     opacity: 0.8;
     height: 100vh;
   }
+
+  .about-pic{
+    text-align: center;
+  }
 }
 
 #instagram{
@@ -176,6 +180,8 @@ a:hover {
   background-size: cover;
   padding: 50px 0px;
 }
+
+
 
 .bottom-container {
   background-color: #003260;
