--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ a:hover {
   }
 
   .about-pic{
-    text-align: center;
+    display: block;
   }
 }
 
@@ -178,7 +178,8 @@ a:hover {
   background-repeat: no-repeat;
   background-color: #eaf6f6;
   background-size: cover;
-  padding: 50px 0px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 
