--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
 }
 
 h1 {
-
   font-family: 'Kaushan Script', cursive;
   color: #003260;
 }
@@ -28,7 +27,7 @@ h1 {
   padding-left: 20px;
 }
 
-#explore_social{
+#explore_social {
   display: block;
   font-family: 'PT Serif', serif;
   font-size: 2em;
@@ -39,7 +38,7 @@ h1 {
   text-decoration: none;
 }
 
-h2{
+h2 {
   font-family: 'PT Serif', serif;
   color: #003260;
   font-size: 2.2rem;
@@ -52,7 +51,7 @@ h3 {
   font-size: 1.5rem;
 }
 
-#navigation a{
+#navigation a {
   font-family: 'PT Serif', serif;
   color: #003260;
   font-size: 1.1em;
@@ -64,10 +63,9 @@ a:hover {
   opacity: 0.7;
 }
 
-.contact-me-container{
+.contact-me-container {
   padding: 30px;
 }
-
 
 .index-meet-text {
   font-size: 1.8em;
@@ -77,7 +75,7 @@ a:hover {
   padding-right: 30px;
 }
 
-#address{
+#address {
   font-size: 0.9em;
   text-align: center;
   padding-right: 30px;
@@ -87,24 +85,26 @@ a:hover {
   font-size: 1.1em;
   text-align: justify;
   margin-top: 1.5rem;
-  font-weight:500;
+  font-weight: 500;
   padding: 0px 8px 0px 8px;
 }
-
-
 
 .maintxt {
   font-family: 'Kaushan Script', cursive;
   color: #fff;
   font-size: 4vw;
-  background: rgb(1, 1, 1); /* Fallback color */
-  background: rgba(0, 0, 0, 0.2); /* Black background with 0.5 opacity */
-  width: 35%; /* Full width */
-  padding: 10px; /* Some padding */
-  text-shadow:1px 1px 10px #003260, 1px 1px 10px #ccc;
+  background: rgb(1, 1, 1);
+  /* Fallback color */
+  background: rgba(0, 0, 0, 0.2);
+  /* Black background with 0.5 opacity */
+  width: 35%;
+  /* Full width */
+  padding: 10px;
+  /* Some padding */
+  text-shadow: 1px 1px 10px #003260, 1px 1px 10px #ccc;
 }
 
-.container-fluid{
+.container-fluid {
   padding-left: 0px;
   padding-right: 0px;
 }
@@ -122,7 +122,6 @@ a:hover {
   padding: 50px;
 }
 
-
 @media screen and (max-width: 828px) {
   .img-fluid {
     background-image: url("../images/home-portrait.jpg");
@@ -132,25 +131,19 @@ a:hover {
     opacity: 0.8;
     height: 100vh;
   }
-
-  .about-pic{
-    display: block;
-  }
 }
 
-#instagram{
+#instagram {
   font-family: 'PT Serif', serif;
   display: block;
   font-size: 1.5em;
-  width:100%;
+  width: 100%;
   text-align: left;
   color: #003260;
   text-decoration: none;
   padding-left: 20px;
   padding-bottom: 20px;
 }
-
-
 
 .menu-img {
   position: absolute;
@@ -164,8 +157,6 @@ a:hover {
   opacity: 0.7;
 }
 
-
-
 .middle-container {
   background-image: url("../images/wall.jpg");
   background-repeat: no-repeat;
@@ -174,7 +165,7 @@ a:hover {
   padding-top: 20px;
 }
 
-.about-page-middle-container{
+.about-page-middle-container {
   background-image: url("../images/wall.jpg");
   background-repeat: no-repeat;
   background-color: #eaf6f6;
@@ -182,13 +173,26 @@ a:hover {
   padding: 50px 0px 50px 0px;
 }
 
+#value-text {
+  padding: 30px 40px;
+  ;
+  text-align: justify;
+}
 
+.value-pic{
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.value-heading {
+  padding-top: 50px;
+}
 
 .bottom-container {
   background-color: #003260;
   padding-top: 50px;
   padding-bottom: 10px;
-
 }
 
 .hello-text {
@@ -234,6 +238,7 @@ a:hover {
   padding: 20px;
   margin-right: 10px;
 }
+
 .profile {
   margin: 30px auto;
 }
@@ -261,7 +266,7 @@ a:hover {
 }
 
 .fa:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .fa-facebook {
@@ -278,51 +283,54 @@ a:hover {
   background: #007bb5;
   color: white;
 }
+
 .fa-instagram {
   background: #C13584;
   color: white;
 }
+
 .fa-snapchat-ghost {
   background: #fffc00;
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
 .myButton {
-   background: #3D94F6;
-   background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
-   background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
-   background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
-   background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
-   background-image: -webkit-gradient(to bottom, #3D94F6, #1E62D0);
-   -webkit-border-radius: 20px;
-   -moz-border-radius: 20px;
-   border-radius: 20px;
-   color: #FFFFFF;
-   font-family: Times New Roman;
-   font-size: 21px;
-   font-weight: 600;
-   padding: 17px;
-   -webkit-box-shadow: 1px 1px 20px 0 #000000;
-   -moz-box-shadow: 1px 1px 20px 0 #000000;
-   box-shadow: 1px 1px 20px 0 #000000;
-   text-shadow: 1px 1px 20px #000000;
-   border: solid #337FED 1px;
-   text-decoration: none;
-   display: inline-block;
-   cursor: pointer;
-   text-align: center;
+  background: #3D94F6;
+  background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
+  background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
+  background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
+  background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
+  background-image: -webkit-gradient(to bottom, #3D94F6, #1E62D0);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  color: #FFFFFF;
+  font-family: Times New Roman;
+  font-size: 21px;
+  font-weight: 600;
+  padding: 17px;
+  -webkit-box-shadow: 1px 1px 20px 0 #000000;
+  -moz-box-shadow: 1px 1px 20px 0 #000000;
+  box-shadow: 1px 1px 20px 0 #000000;
+  text-shadow: 1px 1px 20px #000000;
+  border: solid #337FED 1px;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
 }
 
 .myButton:hover {
-   border: solid #337FED 1px;
-   background: #1E62D0;
-   background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
-   background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
-   background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
-   background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
-   background-image: -webkit-gradient(to bottom, #1E62D0, #3D94F6);
-   -webkit-border-radius: 20px;
-   -moz-border-radius: 20px;
-   border-radius: 20px;
-   text-decoration: none;
+  border: solid #337FED 1px;
+  background: #1E62D0;
+  background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
+  background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
+  background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
+  background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
+  background-image: -webkit-gradient(to bottom, #1E62D0, #3D94F6);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  text-decoration: none;
 }
