--- a/css/style.css
+++ b/css/style.css
@@ -120,10 +120,13 @@ a:hover {
 
 @media screen and (max-width: 828px) {
   .img-fluid {
-    background-image: url("../images/home-portrait.jpg");
+    background-image: url("../images/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     opacity: 0.8;
     height: 60vh;
-    width: 100%;
+    transform: perspective(50%);
   }
 }
 
