--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,8 @@ a:hover {
     height: 60vh;
     transform: perspective(50%);
   }
+
+
 }
 
 #instagram {
@@ -170,15 +172,11 @@ a:hover {
   padding: 50px 0px 50px 0px;
 }
 
-#value-text {
+.value-text {
   padding: 30px 40px;
-  ;
   text-align: justify;
 }
 
-.value-pic{
-  transform: translateX(-50%);
-}
 
 .value-heading {
   padding-top: 50px;
