--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ a:hover {
   padding-right: 0px;
 }
 
-.img-fluid {
+.img-banner-fluid {
   background-image: url("../images/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
