--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ a:hover {
 }
 
 @media screen and (max-width: 828px) {
-  .img-fluid {
+  .img-banner-fluid {
     background-image: url("../images/background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -176,6 +176,7 @@ a:hover {
   padding: 30px 40px;
   text-align: justify;
 }
+
 
 
 .value-heading {
