--- a/css/style.css
+++ b/css/style.css
@@ -120,14 +120,10 @@ a:hover {
 
 @media screen and (max-width: 828px) {
   .img-banner-fluid {
-    background-image: url("../images/background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    opacity: 0.8;
     height: 60vh;
-    transform: perspective(50%);
+    width: 100vw;
   }
+
   .value-pic{
     width: 100vw;
   }
