--- a/css/style.css
+++ b/css/style.css
@@ -150,8 +150,8 @@ a:hover {
 
 @media screen and (max-width: 828px) {
   .img-banner-fluid {
-
-    background-position: 50% 100%;
+    height: 70vh;
+    background-position: 50% 50%;
   }
 }
 
