--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ a:hover {
   background-color: #eaf6f6;
   background-attachment: fixed;
   max-width: 100%;
-  max-height: 100%;
-  height: 100vh;
+  max-height: auto;
+  height: 80vh;
   opacity: 0.8;
   padding: 50px;
 }
