little smaller app icon

--- a/css/style.css
+++ b/css/style.css
@@ -306,8 +306,8 @@ a:hover {
   font-size: 2rem;
 }
 .contact-page-container  .fa {
-  padding: 20px;
-  font-size: 55px;
+  padding: 18px;
+  font-size: 40px;
   text-align: center;
   text-decoration: none;
   margin: 8px 8px;
@@ -321,6 +321,7 @@ a:hover {
 
 .contact-page-container h1 {
   font-size: 3.5rem;
+  padding-bottom: 20px;
 }
 
 /* ---------------------Footer Elements------------------------------- */
