--- a/css/social_style.css
+++ b/css/social_style.css
@@ -9,8 +9,8 @@ body {
 h1 {
 
   font-family: 'Kaushan Script', cursive;
-  color: #EF426F;
-  font-size: 2.5em;
+  color: #003260;
+  font-size: 3.5em;
   text-shadow:1px 1px 10px #fff, 1px 1px 10px #ccc;
   padding: 30px;
 }
