--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 /* ------------------Home page Elements------------------------- */
 body {
   margin: 0;
+  padding-top: 80px;
   text-align: center;
   font-family: 'PT Serif', serif;
   color: #40514e;
@@ -48,7 +49,10 @@ a:hover {
   opacity: 0.7;
 }
 
-
+.nav-phone {
+  font-size: 150%;
+  font-weight: bolder;
+}
 
 .middle-container {
   background-image: url("../images/wall.jpg");
@@ -56,6 +60,10 @@ a:hover {
   background-color: #eaf6f6;
   background-size: cover;
   padding-top: 20px;
+}
+
+.fixed-top {
+  background-color: #fff;
 }
 
 /* ------------------Home page Elements------------------------- */
@@ -122,7 +130,7 @@ a:hover {
   font-size: 2em;
   color: #003260;
   font-weight: bold;
-  padding: 20px;
+  padding-top: 20px;
 }
 
 #social h2 {
@@ -299,15 +307,15 @@ a:hover {
   padding-bottom: 20px;
 }
 
-.contact-page-container h3{
+.contact-page-container h3 {
   font-size: 2rem;
 }
 
-.contact-page-container .let-talk-24x7{
+.contact-page-container .let-talk-24x7 {
   padding: 50px 20px;
 }
 
-.contact-page-container  .fa {
+.contact-page-container .fa {
   padding: 18px;
   font-size: 40px;
   text-align: center;
@@ -316,12 +324,10 @@ a:hover {
   border-radius: 50%;
 }
 
-.contact-page-middle-container{
+.contact-page-middle-container {
   padding: 30px 20px;
   background-color: #C0C0C0;
 }
-
-
 
 /* ---------------------Footer Elements------------------------------- */
 .bottom-container {
