Added Contact Us box

--- a/css/style.css
+++ b/css/style.css
@@ -312,8 +312,8 @@ a:hover {
   font-size: 2rem;
 }
 
-.contact-page-container .let-talk-24x7 {
-  padding: 50px 20px;
+.form-section h2{
+  padding: 20px;
 }
 
 .contact-page-container .fa {
