--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,6 @@ a:hover {
   color: #003260;
   text-decoration: none;
   padding-left: 20px;
-  padding-bottom: 20px;
 }
 
 #profile h2 {
@@ -140,7 +139,8 @@ a:hover {
   text-align: left;
   color: #003260;
   font-weight: bold;
-  padding-left: 20px;
+  padding: 20px 0px 0px 20px;
+  margin-bottom: 0px;
 }
 
 #explore_social {
