--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,9 @@ a:hover {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-
+.bc-social-container{
+  padding: 10px 20px; 
+}
 
 .bc-middle-container {
   padding: 20px;
@@ -408,6 +410,11 @@ a:hover {
   padding: 0px 20px;
   text-align: justify;
   text-justify: auto;
+  text-align-last: center;
+}
+
+.bc-button{
+  font-size: 1em;
 }
 
 .title h2 {
@@ -418,4 +425,20 @@ a:hover {
 .title p {
   color: #fff;
   font-size: 1.5em;
+}
+
+.bc-icon{
+  padding: 15px;
+
+}
+
+.bc-icon:hover{
+  /* opacity: 0.7; */
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  border-radius: 5%;
+}
+
+.bc-icon img{
+  padding:20px 30px;
+  margin:-20px;
 }
