--- a/css/style.css
+++ b/css/style.css
@@ -426,9 +426,39 @@ a:hover {
   font-size: 1.5em;
 }
 
+/* .bc-facebook{
+  background: #3B5998;
+}
+
+.bc-instagram{
+  background: #C13584;
+}
+
+.bc-whatsapp{
+  background: #25d366;
+}
+
+.bc-email{
+  background: #4285F4;
+}
+
+.bc-tiktok{
+  background: #00f2ea ;
+}
+.bc-map{
+  background: #ff0050;
+}
+
+.bc-call{
+  background: #B75D69;
+}
+
+.bc-web{
+  background: #fdffb6;
+} */
+
 .bc-icon{
   padding: 15px;
-
 }
 
 .bc-icon:hover{
