--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,7 @@ a:hover {
 }
 
 .bc-middle-container {
-  padding: 20px;
+  padding: 20px 20px 0px 20px;
 }
 
 .bc-about-me{
@@ -458,18 +458,18 @@ a:hover {
 } */
 
 .bc-icon{
-  padding: 15px;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
 
 .bc-icon:hover{
-  /* opacity: 0.7; */
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  opacity: 0.7;
   border-radius: 5%;
 }
 
 .bc-icon img{
-  padding:20px 30px;
-  margin:-20px;
+  padding: 20px 30px;
+  margin: -20px;
 }
 
 .modal-body{
@@ -479,4 +479,14 @@ a:hover {
 .bc-big-save-contact-button{
   margin: 20px 0px;
   padding: 10px 0px;
+}
+
+.business-card{
+  padding: 5px 10px 15px 10px;
+}
+
+.business-card img{
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 2%;
 }
