--- a/css/style.css
+++ b/css/style.css
@@ -398,12 +398,32 @@ a:hover {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-.bc-social-container{
-  padding: 10px 20px;
+
+/* ------------------Business_card Elements------------------------- */
+.business-card{
+  padding: 5px 10px 15px 10px;
+}
+
+.business-card img{
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 1.6%;
+}
+
+.business-card a{
+  padding: 0px;
+}
+
+.btn-dark, .btn-dark:hover, .btn-dark:active, .btn-dark:visited {
+  background-color: #003260 !important;
 }
 
 .bc-middle-container {
   padding: 0px 20px 0px 20px;
+}
+
+.bc-social-container{
+  padding: 10px 20px;
 }
 
 .bc-about-me{
@@ -443,18 +463,4 @@ a:hover {
 .bc-big-save-contact-button{
   margin: 20px 0px;
   padding: 10px 0px;
-}
-
-.business-card{
-  padding: 5px 10px 15px 10px;
-}
-
-.business-card img{
-  text-align: center;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 1.6%;
-}
-
-.btn-dark, .btn-dark:hover, .btn-dark:active, .btn-dark:visited {
-  background-color: #003260 !important;
 }
