added coldwell banker logo and hyperlinked it

--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,15 @@ a:hover {
   line-height: 3rem;
 }
 
-.review-button{
+.review{
   width: 6rem;
+}
+
+.send-review{
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+}
+
+.coldwell-logo{
+  width: 9rem;
+  padding-top: 5px;
 }
