--- a/css/style.css
+++ b/css/style.css
@@ -448,6 +448,7 @@ a:hover {
 
 .bc-icon{
   padding: 10px;
+  box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
 
 
@@ -492,4 +493,16 @@ a:hover {
 .coldwell-logo{
   width: 9rem;
   padding-top: 5px;
+}
+
+.social-bar{
+  border-width: thick;
+  border-color: red;
+}
+
+.social-bar a{
+  text-decoration: none;
+}
+.social-icon{
+  padding-right: 20px;
 }
