Updating business card

--- a/css/style.css
+++ b/css/style.css
@@ -498,9 +498,9 @@ a:hover {
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
-.coldwell-logo {
-  width: 9rem;
-  padding-top: 5px;
+.remax-logo {
+  width: 18vw;
+  padding-top: 8px;
 }
 
 .social-bar a {
