--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ a:hover {
 }
 
 .img-banner-fluid {
-  background-image: url("../images/background.jpg");
+  background-image: url("../images/CT_exterior_9_web.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #eaf6f6;
@@ -302,7 +302,10 @@ a:hover {
   padding: 10px 0px 60px;
 }
 
-.buy-sell, .lease, .commercial, .invest {
+.buy-sell,
+.lease,
+.commercial,
+.invest {
   max-width: 100%;
   height: auto;
   padding-top: 5px;
@@ -351,10 +354,10 @@ a:hover {
   padding-bottom: 10px;
 }
 
-.bottom-container hr{
+.bottom-container hr {
   display: block;
   width: 90%;
-  margin:auto;
+  margin: auto;
   height: 2px;
   color: #fff;
   margin-top: 15px;
@@ -433,7 +436,10 @@ a:hover {
   padding: 0px;
 }
 
-.btn-dark, .btn-dark:hover, .btn-dark:active, .btn-dark:visited {
+.btn-dark,
+.btn-dark:hover,
+.btn-dark:active,
+.btn-dark:visited {
   background-color: #003260 !important;
 }
 
@@ -492,7 +498,8 @@ a:hover {
   padding: 10px 20px;
 }
 
-.btn-light, .btn-light:hover {
+.btn-light,
+.btn-light:hover {
   padding: 0px;
   font-size: 1.2rem;
   text-align: center;
@@ -520,4 +527,99 @@ a:hover {
 .social-icon {
   padding-right: 20px;
   opacity: 0.8;
+}
+
+
+
+
+/* Buying_tips_html_elements */
+/* .masthead {
+  background-image: url("../images/CT_exterior_9_web.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #eaf6f6;
+  background-attachment: fixed;
+  background-position: center;
+  max-width: 100%;
+  max-height: auto;
+  height: 80vh;
+  opacity: 0.8;
+  padding: 50px;
+} */
+
+
+header.masthead {
+  background-image: url("../images/CT_exterior_9_web.jpg");
+  position: relative;
+  margin-bottom: 3rem;
+  padding-top: calc(8rem + 57px);
+  padding-bottom: 8rem;
+  background: no-repeat center center;
+  background-color: #6c757d;
+  background-size: cover;
+  background-attachment: scroll;
+}
+
+header.masthead:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #212529;
+  opacity: 0.5;
+}
+
+
+header.masthead .post-heading h1,
+header.masthead .post-heading .h1 {
+  font-size: 5.25rem;
+  color: #fff;
+  line-height: 1.5;
+}
+
+header.masthead .post-heading .meta,
+header.masthead .post-heading .subheading {
+  line-height: 1.1;
+  display: block;
+  color: #fff;
+}
+
+header.masthead .post-heading .subheading {
+  font-size: 3.5rem;
+  font-weight: 600;
+  margin: 0.75rem 0 2rem;
+}
+
+header.masthead .post-heading .meta {
+  font-size: 1.25rem;
+  font-weight: 300;
+  font-style: italic;
+}
+
+header.masthead .post-heading .meta a {
+  color: #fff;
+}
+
+@media (min-width: 992px) {
+  header.masthead {
+    padding-top: 12.5rem;
+    padding-bottom: 12.5rem;
+  }
+
+
+  header.masthead .post-heading h1,
+  header.masthead .post-heading .h1 {
+    font-size: 4.5rem;
+  }
+
+  header.masthead .post-heading .subheading {
+    font-size: 1.875rem;
+  }
+}
+
+.blog-p {
+  text-align: justify;
+
 }
