--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,8 @@ header.index-banner:before {
 
 header.masthead .post-heading h1,
 header.masthead .post-heading .h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
   font-size: 2.25rem;
   color: #fff;
   line-height: 1.5;
@@ -546,6 +548,9 @@ header.masthead .post-heading .h1 {
 
 header.masthead .post-heading .meta,
 header.masthead .post-heading .subheading {
+  font-family: 'Open Sans',
+  sans-serif;
+  font-weight: 400;
   line-height: 1.1;
   display: block;
   color: #fff;
@@ -612,7 +617,7 @@ header.masthead .post-heading .meta a {
   text-align: center;
 }
 
-.stats{
+.stats{  
   padding: 0px;
   margin: 0px;
 }
