--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,6 @@ header.masthead .post-heading .meta a {
 }
 
 .hubspot-link__container .sproket{
-  display: none;
-  color: red;
+  display: none !important;
+  color: red !important;
 }
